--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "primus-rooms": "~1.1.1",
     "engine.io": "~0.7.10",
     "monk": "~0.7.1",
-    "nodetime": "~0.8.14"
+    "nodetime": "~0.8.14",
+    "newrelic": "~1.1.1"
   },
   "devDependencies": {},
   "scripts": {
