--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "primus": "~1.4.4",
-    "primus-rooms": "~1.1.1",
+    "dotenv": "^1.2.0",
     "engine.io": "~0.7.10",
     "monk": "~0.7.1",
-    "nodetime": "~0.8.14",
-    "newrelic": "~1.1.1"
+    "primus": "~1.4.4",
+    "primus-rooms": "~1.1.1"
   },
   "devDependencies": {},
   "scripts": {
